--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
+    <link rel="stylesheet" href="./style.css">
     <!-- Your code here! -->
   </head>
 
